New data added for 2024-2025

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://harbhlahritik.github.io/bill-generator",
   "dependencies": {
+    "@react-pdf/renderer": "^4.1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
